# DSA-em-C

./: CMakeLists.txt  README.md  main.c  usaListaSequencialInterativo
Aula1/: README.md
Aula2/: README.md
Aula2/Exemplos/: exercicio.c
Aula3/: README.md
Exemplos/Arvore-Binaria/: arvoreBinaria.c
Exemplos/Arvore-De-Busca-Binaria/: arvoreDeBuscaBinaria.c  usaArvoreDeBuscaBinaria.c
Exemplos/Arvore-De-Busca-Binaria2/: arvoreDeBuscaBinaria2.c  filaEmLLD.c  listaLigadaD.c  pilhaInvertidaEmLLD.c  usaArvoreDeBuscaBinaria2.c
Exemplos/Arvore-Enaria1/: arvoreEnaria1.c
Exemplos/Arvore-Enaria2/: arvoreEnaria2.c
Exemplos/ArvoreAVL/: arvoreAVL.c  usaArvoreAVL.c
Exemplos/Deque (DINAMICO)/: DequeDinamico.c  usaDeque.c
Exemplos/Fila (ESTATICA)/: filaEstatica.c  usaFilaEstatica.c
Exemplos/Fila (ESTATICA)/impl2/: filaEstatica.c
Exemplos/Fila(DINAMICA)/: filaDinamica.c  usaFilaDinamica.c
Exemplos/Heap/: heap.c  heap2.c
Exemplos/Lisa-Duplamente-Ligada-Circular-Cabeca(DINAMICA)/: listaDuplamenteLigadaCC.c  usaListaLigadaInterativoDCC.c
Exemplos/Lista-Ligada(DINAMICA)/: filaEmLLD.c  listaLigadaD.c  pilhaEmLLD.c  pilhaInvertidaEmLLD.c  usaFilaEmLLD.c  usaListaLigadaInterativo.c  usaPilhaEmLLD.c  usaPilhaInvertidaEmLLD.c
Exemplos/Lista-Ligada(ESTATICA)/: listaLigada.c  usaListaLigadaInterativo.c
Exemplos/Lista-Ligada-Cabeca-Circular/: listaLigadaCabCirc.c  usaListaLigadaInterativoCC.c
Exemplos/Lista-Ligada-Sentinela/: listaLigadaSentinela.c  usaListaLigadaInterativo.c
Exemplos/Lista-Linear-Sequencial/: listaSequencia.c  usaListaSequencialInterativo.c
Exemplos/Pilha (DINAMICA)/: pilhaDinamica.c  usaPilhaDinamica.c
Exemplos/Pilha Dupla(ESTATICA)/: duasPilhasEstaticas.c  usaDuasPilhasEstaticas.c
Exemplos/Pilha(ESTATICA)/: pilhaEstatica.c  usaPilhaEstatica.c
